sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: missing arguments for method != in class Object;
follow this method with `_' if you want to treat it as a partially applied function
        if (!=plusPetitQue(i,i+1)) {
            ^